package construccion.builder;

public enum Tipo {
    FAMILIAR,DEPORTIVO, SUV
}
